--- a/roles/prepare/tasks/centos.yml
+++ b/roles/prepare/tasks/centos.yml
@@ -11,7 +11,7 @@
     url: http://mirrors.aliyun.com/repo/Centos-7.repo
     dest: /etc/yum.repos.d/CentOS-Base.repo
 
-- name: add aliyun epel
+- name: get aliyun epel
   get_url:
     url: http://mirrors.aliyun.com/repo/epel-7.repo
     dest: /etc/yum.repos.d/epel.repo
