--- a/06.network.yml
+++ b/06.network.yml
@@ -4,6 +4,6 @@
   - kube-node
   roles:
   - { role: calico, when: "CLUSTER_NETWORK == 'calico'" }
-  - { role: cilium, when: "CLUSTER_NETWORK == 'cilium'" }
+#  - { role: cilium, when: "CLUSTER_NETWORK == 'cilium'" }
   - { role: flannel, when: "CLUSTER_NETWORK == 'flannel'" }
-  - { role: kube-router, when: "CLUSTER_NETWORK == 'kube-router'" }
+#  - { role: kube-router, when: "CLUSTER_NETWORK == 'kube-router'" }
