--- a/example/hosts.m-masters.example
+++ b/example/hosts.m-masters.example
@@ -63,9 +63,8 @@ CLUSTER_DNS_SVC_IP="10.68.0.2"
 # 集群 DNS 域名
 CLUSTER_DNS_DOMAIN="cluster.local."
 
-# 集群basic auth 使用的用户名和密码 (运行时会生成随机密码)
-BASIC_AUTH_USER="admin"
-BASIC_AUTH_PASS="test1234"
+# 集群basic auth apiserver 基础认证（用户名/密码）配置
+# master 节点文件‘/etc/kubernetes/ssl/basic-auth.csv’ 可以查看密码
 
 # ---------附加参数--------------------
 #默认二进制文件目录
