update traefik all

--- a/manifests/ingress/tls/traefik-tls-configmap.yaml
+++ b/manifests/ingress/tls/traefik-tls-configmap.yaml
@@ -15,7 +15,7 @@ data:
       [entryPoints.http]
       address = ":80"
       ## http skip https 
-      [entryPoints.http.redirect]
+      #[entryPoints.http.redirect]
       #entryPoint = "https"
       [entryPoints.https]
       address = ":443"
