--- a/manifests/ingress/tls/traefik-tls-deployment.yaml
+++ b/manifests/ingress/tls/traefik-tls-deployment.yaml
@@ -84,7 +84,7 @@ spec:
         - mountPath: "/ssl"
           name: ssl
         - mountPath: "/config"
-          name: config        
+          name: traefik-tls-config
         args:
         - --api
         - --kubernetes
@@ -117,7 +117,7 @@ spec:
       # custom default ports (20000~40000)
       nodePort: 20080
     - protocol: TCP
-	  # add https
+      # add https
       port: 443
       name: https
       nodePort: 20443
