--- a/roles/prepare/tasks/common.yml
+++ b/roles/prepare/tasks/common.yml
@@ -18,8 +18,20 @@
     - ip_vs_rr
     - ip_vs_wrr
     - ip_vs_sh
-    - nf_conntrack_ipv4    # kernel < 4.19 
-    - nf_conntrack         # kernel >= 4.19
+  ignore_errors: true
+
+- name: 转换内核版本为浮点数
+  set_fact:
+     KERNEL_VER: "{{ ansible_kernel.split('-')[0].split('.')[0]|int + ansible_kernel.split('-')[0].split('.')[1]|int/100 }}"
+
+- name: 加载内核模块 nf_conntrack
+  modprobe: name=nf_conntrack state=present
+  when: "KERNEL_VER|float >= 4.19"
+  ignore_errors: true
+
+- name: 加载内核模块 nf_conntrack_ipv4
+  modprobe: name=nf_conntrack_ipv4 state=present
+  when: "KERNEL_VER|float < 4.19"
   ignore_errors: true
 
 - name: 启用systemd自动加载模块服务
@@ -42,4 +54,3 @@
 
 - name: 把SCTP列入内核模块黑名单
   copy: src=sctp.conf dest=/etc/modprobe.d/sctp.conf
-
