--- a/roles/kube-node/defaults/main.yml
+++ b/roles/kube-node/defaults/main.yml
@@ -9,4 +9,10 @@ SANDBOX_IMAGE: "mirrorgooglecontainers/pause-amd64:3.1"
 KUBELET_ROOT_DIR: "/var/lib/kubelet"
 
 # node节点最大pod 数
-MAX_PODS: 110
+MAX_PODS: 99
+
+# 配置为kube组件（kubelet,kube-proxy,dockerd等）预留的资源量
+KUBE_RESERVED: "cpu=200m,memory=500Mi,ephemeral-storage=1Gi"
+
+# 配置kubelet的hard eviction条件
+HARD_EVICTION: "memory.available<200Mi,nodefs.available<10%"
