rsyslog disable "IMJournalStateFile" module

--- a/roles/prepare/tasks/centos.yml
+++ b/roles/prepare/tasks/centos.yml
@@ -55,5 +55,12 @@
     regexp: 'ModLoad imjournal'
     line: '#$ModLoad imjournal # provides access to the systemd journal'
 
+- name: 禁止rsyslog获取journald日志2
+  lineinfile:
+    dest: /etc/rsyslog.conf
+    state: present
+    regexp: 'IMJournalStateFile'
+    line: '#$IMJournalStateFile imjournal.state'
+
 - name: 重启rsyslog服务
   service: name=rsyslog state=restarted
