--- a/roles/deploy/defaults/main.yml
+++ b/roles/deploy/defaults/main.yml
@@ -8,3 +8,7 @@ CONTEXT_NAME: "kubernetes"
 CA_EXPIRY: "87600h"
 CERT_EXPIRY: "87600h"
 
+# kubectl 权限配置
+# 'admin' 表示创建集群管理员（所有）权限的 kubeconfig 
+# 'read' 表示创建只读权限的 kubeconfig
+KUBECTL_USER: "admin"
