add containerd yml

--- a/03.containerd.yml
+++ b/03.containerd.yml
@@ -1,6 +1,6 @@
-# install docker service
+# to install containerd service
 - hosts:
   - kube-master
   - kube-node
   roles:
-  - docker
+  - containerd
