--- a/roles/cluster-addon/tasks/main.yml
+++ b/roles/cluster-addon/tasks/main.yml
@@ -1,3 +1,11 @@
+# 设置 dns svc ip (这里选用 SERVICE_CIDR 中第2个IP)
+- name: 注册变量 DNS_SVC_IP
+  shell: echo {{ SERVICE_CIDR }}|cut -d/ -f1|awk -F. '{print $1"."$2"."$3"."$4+2}'
+  register: DNS_SVC_IP
+
+- name: 设置变量 CLUSTER_DNS_SVC_IP
+  set_fact: CLUSTER_DNS_SVC_IP={{ DNS_SVC_IP.stdout }}
+
 - block:
     - name: 在deploy 节点创建相关目录
       file: path={{ item }} state=directory
@@ -25,17 +33,22 @@
   run_once: true
 
 - block:
-    - name: 尝试推送离线{{ dns_backend }}镜像（若执行失败，可忽略）
-      copy: src={{ base_dir }}/down/{{ dns_offline }} dest=/opt/kube/images/{{ dns_offline }}
-      when: 'dns_offline in download_info.stdout'
-
-    - name: 获取{{ dns_backend }}离线镜像推送情况
-      command: "ls /opt/kube/images"
-      register: image_info     
- 
-    - name: 导入{{ dns_backend }}的离线镜像（若执行失败，可忽略）
-      shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ dns_offline }}"
-      when: 'dns_offline in image_info.stdout'
+    - block:
+        - name: 尝试推送离线{{ dns_backend }}镜像（若执行失败，可忽略）
+          copy: src={{ base_dir }}/down/{{ dns_offline }} dest=/opt/kube/images/{{ dns_offline }}
+          when: 'dns_offline in download_info.stdout'
+    
+        - name: 获取{{ dns_backend }}离线镜像推送情况
+          command: "ls /opt/kube/images"
+          register: image_info     
+     
+        - name: 导入{{ dns_backend }}的离线镜像（若执行失败，可忽略）
+          shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ dns_offline }}"
+          when: 'dns_offline in image_info.stdout and CONTAINER_RUNTIME == "docker"'
+    
+        - name: 导入{{ dns_backend }}的离线镜像（若执行失败，可忽略）
+          shell: "{{ bin_dir }}/ctr -n=k8s.io images import /opt/kube/images/{{ dns_offline }}"
+          when: 'dns_offline in image_info.stdout and CONTAINER_RUNTIME == "containerd"'
     
     - name: 创建{{ dns_backend }}部署
       shell: "{{ bin_dir }}/kubectl apply -f /opt/kube/kube-system/{{ dns_backend }}"
@@ -48,17 +61,22 @@
   ignore_errors: true
 
 - block:
-    - name: 尝试推送离线 metrics-server镜像（若执行失败，可忽略）
-      copy: src={{ base_dir }}/down/{{ metricsserver_offline }} dest=/opt/kube/images/{{ metricsserver_offline }}
-      when: 'metricsserver_offline in download_info.stdout'
+    - block:
+        - name: 尝试推送离线 metrics-server镜像（若执行失败，可忽略）
+          copy: src={{ base_dir }}/down/{{ metricsserver_offline }} dest=/opt/kube/images/{{ metricsserver_offline }}
+          when: 'metricsserver_offline in download_info.stdout'
+        
+        - name: 获取metrics-server离线镜像推送情况
+          command: "ls /opt/kube/images"
+          register: image_info     
+     
+        - name: 导入 metrics-server的离线镜像（若执行失败，可忽略）
+          shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ metricsserver_offline }}"
+          when: 'metricsserver_offline in image_info.stdout and CONTAINER_RUNTIME == "docker"'
     
-    - name: 获取metrics-server离线镜像推送情况
-      command: "ls /opt/kube/images"
-      register: image_info     
- 
-    - name: 导入 metrics-server的离线镜像（若执行失败，可忽略）
-      shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ metricsserver_offline }}"
-      when: 'metricsserver_offline in image_info.stdout'
+        - name: 导入 metrics-server的离线镜像（若执行失败，可忽略）
+          shell: "{{ bin_dir }}/ctr -n=k8s.io images import /opt/kube/images/{{ metricsserver_offline }}"
+          when: 'metricsserver_offline in image_info.stdout and CONTAINER_RUNTIME == "containerd"'
     
     - name: 创建 metrics-server部署
       shell: "{{ bin_dir }}/kubectl apply -f {{ base_dir }}/manifests/metrics-server"
@@ -67,21 +85,37 @@
   when: '"metrics-server" not in pod_info.stdout and metricsserver_install == "yes"'
   ignore_errors: true
 
+# 现阶段 dashboard 获取metrics仍旧依赖于heapster，因此需连带安装heapster
 - block:
-    - name: 尝试推送离线 dashboard镜像（若执行失败，可忽略）
-      copy: src={{ base_dir }}/down/{{ dashboard_offline }} dest=/opt/kube/images/{{ dashboard_offline }}
-      when: 'dashboard_offline in download_info.stdout'
-    
-    - name: 获取dashboard离线镜像推送情况
-      command: "ls /opt/kube/images"
-      register: image_info     
+    - block:
+        - name: 尝试推送离线 dashboard heapster镜像（若执行失败，可忽略）
+          copy: src={{ base_dir }}/down/{{ item }} dest=/opt/kube/images/{{ item }}
+          when: 'item in download_info.stdout'
+          with_items:
+          - "{{ dashboard_offline }}"
+          - "{{ heapster_offline }}"
+
+        - name: 获取dashboard离线镜像推送情况
+          command: "ls /opt/kube/images"
+          register: image_info     
+          
+        - name: 导入 dashboard heapster的离线镜像（docker）
+          shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ item }}"
+          with_items:
+          - "{{ dashboard_offline }}"
+          - "{{ heapster_offline }}"
+          when: "item in image_info.stdout and CONTAINER_RUNTIME == 'docker'"
       
-    - name: 导入 dashboard的离线镜像（若执行失败，可忽略）
-      shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ dashboard_offline }}"
-      when: 'dashboard_offline in image_info.stdout'
+        - name: 导入 dashboard heapster的离线镜像（containerd）
+          shell: "{{ bin_dir }}/ctr -n=k8s.io images import /opt/kube/images/{{ item }}"
+          with_items:
+          - "{{ dashboard_offline }}"
+          - "{{ heapster_offline }}"
+          when: "item in image_info.stdout and CONTAINER_RUNTIME == 'containerd'"
       
     - name: 创建 dashboard部署
-      shell: "{{ bin_dir }}/kubectl apply -f {{ base_dir }}/manifests/dashboard"
+      shell: "{{ bin_dir }}/kubectl apply -f {{ base_dir }}/manifests/dashboard && \
+	      {{ bin_dir }}/kubectl apply -f {{ base_dir }}/manifests/heapster/heapster-only"
       delegate_to: "{{ groups.deploy[0] }}"
       run_once: true
   when: '"kubernetes-dashboard" not in pod_info.stdout and dashboard_install == "yes"'
@@ -91,37 +125,22 @@
   when: '"ingress-controller" not in pod_info.stdout and ingress_install == "yes"'
 
 - block:
-    - name: 尝试推送离线 heapster镜像（若执行失败，可忽略）
-      copy: src={{ base_dir }}/down/{{ heapster_offline }} dest=/opt/kube/images/{{ heapster_offline }}
-      when: 'heapster_offline in download_info.stdout'
-    
-    - name: 获取heapster离线镜像推送情况
-      command: "ls /opt/kube/images"
-      register: image_info     
-      
-    - name: 导入 heapster的离线镜像（若执行失败，可忽略）
-      shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ heapster_offline }}"
-      when: 'heapster_offline in image_info.stdout'
-      
-    - name: 创建 heapster部署
-      shell: "{{ bin_dir }}/kubectl apply -f {{ base_dir }}/manifests/heapster/heapster.yaml"
-      delegate_to: "{{ groups.deploy[0] }}"
-      run_once: true
-  when: '"heapster" not in pod_info.stdout and heapster_install == "yes"'
-  ignore_errors: true
+    - block:
+        - name: 尝试推送离线 metallb镜像（若执行失败，可忽略）
+          copy: src={{ base_dir }}/down/{{ metallb_offline }} dest=/opt/kube/images/{{ metallb_offline }}
+          when: 'metallb_offline in download_info.stdout'
+        
+        - name: 获取metallb离线镜像推送情况
+          command: "ls /opt/kube/images"
+          register: image_info     
+          
+        - name: 导入 metallb的离线镜像（若执行失败，可忽略）
+          shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ metallb_offline }}"
+          when: 'metallb_offline in image_info.stdout and CONTAINER_RUNTIME == "docker"'
 
-- block:
-    - name: 尝试推送离线 metallb镜像（若执行失败，可忽略）
-      copy: src={{ base_dir }}/down/{{ metallb_offline }} dest=/opt/kube/images/{{ metallb_offline }}
-      when: 'metallb_offline in download_info.stdout'
-    
-    - name: 获取metallb离线镜像推送情况
-      command: "ls /opt/kube/images"
-      register: image_info     
-      
-    - name: 导入 metallb的离线镜像（若执行失败，可忽略）
-      shell: "{{ bin_dir }}/docker load -i /opt/kube/images/{{ metallb_offline }}"
-      when: 'metallb_offline in image_info.stdout'
+        - name: 导入 metallb的离线镜像（若执行失败，可忽略）
+          shell: "{{ bin_dir }}/ctr -n=k8s.io images import /opt/kube/images/{{ metallb_offline }}"
+          when: 'metallb_offline in image_info.stdout and CONTAINER_RUNTIME == "containerd"'
 
     - name: 生成 metallb 相关 manifests
       template: src=metallb/{{ item }}.j2 dest=/opt/kube/kube-system/{{ item }}
