To optimize the deploy and prepare process

--- a/roles/prepare/tasks/debian.yml
+++ b/roles/prepare/tasks/debian.yml
@@ -29,7 +29,7 @@
     regexp: "ulimit -SHn"
     line: "ulimit -SHn 65535"
 
-# 优化设置 journal 日志相关
+# 优化设置 journal 日志相关，避免日志重复搜集，浪费系统资源
 - name: 准备 journal 日志相关目录
   file: name={{ item }} state=directory
   with_items:
