--- a/roles/deploy/defaults/main.yml
+++ b/roles/deploy/defaults/main.yml
@@ -1,14 +1,13 @@
-# kubeconfig Configuration parameters 
-# default parameters
-CLUSTER_NAME: "kubernetes"
-USER_NAME: "admin"
-CONTEXT_NAME: "kubernetes"
-
 # CA 证书相关参数
-CA_EXPIRY: "87600h"
-CERT_EXPIRY: "87600h"
+CA_EXPIRY: "876000h"
+CERT_EXPIRY: "438000h"
 
-# kubectl 权限配置
+# apiserver 默认第一个master节点
+KUBE_APISERVER: "https://{{ groups['kube-master'][0] }}:6443"
+
+# kubeconfig 配置参数，注意权限根据‘USER_NAME’设置：
 # 'admin' 表示创建集群管理员（所有）权限的 kubeconfig 
 # 'read' 表示创建只读权限的 kubeconfig
-KUBECTL_USER: "admin"
+CLUSTER_NAME: "cluster1"
+USER_NAME: "admin"
+CONTEXT_NAME: "context-{{ CLUSTER_NAME }}-{{ USER_NAME }}"
