--- a/roles/prepare/tasks/centos.yml
+++ b/roles/prepare/tasks/centos.yml
@@ -6,22 +6,13 @@
       - firewalld-filesystem
     state: absent
 
-- name: get aliyun base-repo
-  get_url:
-    url: http://mirrors.aliyun.com/repo/Centos-7.repo
-    dest: /etc/yum.repos.d/CentOS-Base.repo
+#- name: 添加EPEL仓库
+#  yum: name=epel-release state=present
 
-- name: get aliyun epel
-  get_url:
-    url: http://mirrors.aliyun.com/repo/epel-7.repo
-    dest: /etc/yum.repos.d/epel.repo
-
-- name: yum clean and makecache
-  shell: "yum clean all && yum makecache"
-  ignore_warnings: yes
-
-- name: 添加EPEL仓库
-  yum: name=epel-release state=present
+- name: 添加Amazon EPEL仓库
+  shell: "amazon-linux-extras install epel"
+  when: ansible_distribution == "Amazon"
+  ignore_errors: true
 
 - name: 安装基础软件包
   yum: 
@@ -29,13 +20,13 @@
       - conntrack-tools     # ipvs 模式需要
       - psmisc        # 安装psmisc 才能使用命令killall，它在keepalive的监测脚本中使用到
       - nfs-utils     # 挂载nfs 共享文件需要 (创建基于 nfs的PV 需要)
-      - jq                  # 轻量JSON处理程序，安装docker查询镜像需要
+      #- jq                  # 轻量JSON处理程序，安装docker查询镜像需要
       - socat               # 用于port forwarding
       - bash-completion     # bash命令补全工具，需要重新登录服务器生效
       - rsync               # 文件同步工具，分发证书等配置文件需要
       - ipset
       - ipvsadm
-    state: present
+    state: present 
 
 - name: 临时关闭 selinux
   shell: "setenforce 0"
@@ -48,7 +39,7 @@
     line: "SELINUX=disabled"
 
 # 优化设置 journal 日志相关，避免日志重复搜集，浪费系统资源
-- name: 禁止rsyslog获取journald日志
+- name: 禁止rsyslog获取journald日志1
   lineinfile:
     dest: /etc/rsyslog.conf
     state: present
