To optimize the etcd and {docker|containerd} process

--- a/03.docker.yml
+++ b/03.docker.yml
@@ -1,6 +1,6 @@
-# install docker service
+# to install docker service
 - hosts:
   - kube-master
   - kube-node
   roles:
-  - docker
+  - { role: docker, when: "CONTAINER_RUNTIME == 'docker'" } 
