--- a/roles/kube-node/defaults/main.yml
+++ b/roles/kube-node/defaults/main.yml
@@ -18,3 +18,24 @@ SYS_RESERVED: "cpu=200m,memory=500Mi,ephemeral-storage=1Gi"
 
 # 配置kubelet的hard eviction条件
 HARD_EVICTION: "memory.available<500Mi,nodefs.available<10%"
+
+# node 请求 apiserver 负载均衡算法，常见如下：
+# "roundrobin": 基于服务器权重的轮询
+# "leastconn": 基于服务器最小连接数
+# "source": 基于请求源IP地址
+# "uri": 基于请求的URI
+BALANCE_ALG: "roundrobin"
+
+# 设置 APISERVER 地址
+KUBE_APISERVER: "{%- if inventory_hostname in groups['kube-master'] -%} \
+                     https://{{ inventory_hostname }}:6443 \
+                 {%- else -%} \
+                     {%- if groups['kube-master']|length > 1 -%} \
+                         https://127.0.0.1:6443 \
+                     {%- else -%} \
+                         https://{{ groups['kube-master'][0] }}:6443 \
+                     {%- endif -%} \
+                 {%- endif -%}"
+
+# 增加/删除 master 节点时，node 节点需要重新配置 haproxy 等
+MASTER_CHG: "no"
