--- a/tools/03.addmaster.yml
+++ b/tools/03.addmaster.yml
@@ -3,31 +3,27 @@
 
 - hosts: "{{ NODE_TO_ADD }}" 
   roles:
-  - { role: chrony, when: "hostvars[groups.deploy[0]]['NTP_ENABLED'] == 'yes'" } 
+  - { role: chrony, when: "groups['chrony']|length > 0" } 
   - prepare
   - { role: docker, when: "CONTAINER_RUNTIME == 'docker'" }
   - { role: containerd, when: "CONTAINER_RUNTIME == 'containerd'" }
   - kube-master
   - kube-node
   - { role: calico, when: "CLUSTER_NETWORK == 'calico'" }
-  #- { role: cilium, when: "CLUSTER_NETWORK == 'cilium'" }
+  - { role: cilium, when: "CLUSTER_NETWORK == 'cilium'" }
   - { role: flannel, when: "CLUSTER_NETWORK == 'flannel'" }
-  #- { role: kube-router, when: "CLUSTER_NETWORK == 'kube-router'" }
+  - { role: kube-router, when: "CLUSTER_NETWORK == 'kube-router'" }
+  - { role: kube-ovn, when: "CLUSTER_NETWORK == 'kube-ovn'" }
   # 
   tasks:
   - name: Making master nodes SchedulingDisabled
     shell: "{{ bin_dir }}/kubectl cordon {{ NODE_TO_ADD }} "
-    delegate_to: "{{ groups.deploy[0] }}"
-    when: DEPLOY_MODE != "allinone"
+    when: "inventory_hostname not in groups['kube-node']"
     ignore_errors: true
 
   - name: Setting master role name
     shell: "{{ bin_dir }}/kubectl label node {{ NODE_TO_ADD }} kubernetes.io/role=master --overwrite"
     ignore_errors: true
-    delegate_to: "{{ groups.deploy[0] }}"
 
-# reconfigure and restart the haproxy service
-- hosts: lb
-  roles:
-  #- { role: lb, tags:['restart_lb'] }
-  - lb
+# reconfigure and restart the haproxy service on 'kube-node' nodes
+# refer to the function 'add-node()' in 'tools/easzctl'
